--- a/public/index.html
+++ b/public/index.html
@@ -32,3 +32,5 @@
         <button class='receita' id='botao-receita'>Adicionar receita</button>
     </div>
 </div>
+
+<script src="script.js"></script>
